client/src/components/Bookmarks/BookmarkCard/BookmarkCard.module.css
.BookmarkCard {
  margin-bottom: 30px;
}

.BookmarkCard h3 {
  color: var(--color-accent);
  margin-bottom: 10px;
  font-size: 16px;
  font-weight: 400;
  text-transform: uppercase;
}

.Bookmarks {
  display: flex;
  flex-direction: column;
}

.Bookmarks a {
  line-height: 2;
  transition: all 0.25s;
  display: flex;
}

.BookmarkCard a:hover {
  text-decoration: underline;
  padding-left: 10px;
}

.BookmarkIcon {
  width: 20px;
  display: flex;
  margin-bottom: 1px;
  margin-right: 2px;
}

